# librarian

./: .gitignore  .prettierignore  CLAUDE.md  Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.agent_library/: COMPILE_CHECK_GUIDE.md  DEBUGGING_GUIDE.md  FRONTEND_QUALITY.md  INTEGRATION_TESTING_GUIDE.md  MCP_PROTOCOL.md  PROJECT_DISTRIBUTION_GUIDE.md  RUST_MCP_SERVER.md  RUST_QUALITY.md  SVELTE5_COMPONENTS.md  TAURI_COMMANDS.md  TAURI_SETUP.md  UI_UX_IMPROVEMENT_GUIDE.md  UNIT_TESTING_GUIDE.md  agent_index.yml
.github/workflows/: ci.yml  release.yml  version.yml
src/: App.svelte  app.css  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  entitlements.plist  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_watcher.rs  lib.rs  main.rs  persistence.rs
src-tauri/src/agent_library/: mod.rs  parser.rs  types.rs
src-tauri/src/config/: mod.rs
src-tauri/src/mcp/: handlers.rs  mod.rs  server.rs  types.rs
src-tauri/tests/integration/: main.rs  mcp_server.rs
src/lib/: stores.ts
src/lib/components/: EmptyState.svelte  ErrorBoundary.svelte  Home.svelte  Layout.svelte  Layout.svelte.test.ts  Layout.svelte.ts  MainContent.svelte  McpConnectionGuide.svelte  Navigation.svelte  Notification.svelte  PromptList.svelte  RepositoryManagement.svelte  Sidebar.svelte  Toolbar.svelte
src/lib/components/common/: Button.test.ts
src/lib/components/views/: PromptsView.svelte  PromptsView.test.ts  SettingsView.svelte
src/lib/stores/: app.ts  config.ts  fileWatcher.ts  repositories.test.ts  theme.ts
src/test/: setup.ts  types.d.ts
tests/e2e/: app.spec.ts  repository.spec.ts
tests/integration/: mcp_server.rs
