[package]
name = "librarian"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "librarian_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"

# MCP and file handling dependencies
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde_yaml = "0.9"
walkdir = "2.3"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# File watching
notify = "6.0"

# Markdown processing
pulldown-cmark = "0.9"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Caching
once_cell = "1.19"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"  # 開発時は無効化

[lints.clippy]
# 過度に厳しいlintを無効化
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_docs_in_private_items = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
significant_drop_tightening = "allow"
option_if_let_else = "allow"
needless_pass_by_value = "allow"
match_same_arms = "allow"
case_sensitive_file_extension_comparisons = "allow"
non_std_lazy_statics = "allow"
used_underscore_binding = "allow"
missing_panics_doc = "allow"
unused_async = "allow"
cargo_common_metadata = "allow"
# lint groups（優先度を下げる）
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
tower = "0.4"
hyper = "1.0"

[[test]]
name = "integration"
path = "tests/integration/main.rs"

